# rflight_drone

./: .gitignore  Cargo.toml  LICENSE  bt_enable.sh  spectro.py
.cargo/: config.toml
src/: adc.rs  battery.rs  bluetooth.rs  bluetooth2.rs  bt_control.rs  bt_state.rs  consts.rs  flight_control.rs  init.rs  inputs.rs  leds.rs  main.rs  math.rs  misc.rs  motors.rs  pid.rs  spi.rs  time.rs  uart.rs  utils.rs
src/bluetooth/: command.rs  ev_command.rs  events.rs  gap.rs  gatt.rs  hal_bt.rs  opcode.rs  rx_buffer.rs
src/bt_control/: service_input.rs  service_log.rs  service_sensors.rs
src/flight_control/: control_inputs.rs  control_rates.rs  mod.rs
src/sensors/: ahrs.rs  barometer.rs  filtering.rs  imu.rs  magneto.rs  mod.rs
src/sensors/ahrs/: complementary.rs  fusion.rs  kalman.rs
