[package]
name = "rflight_drone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"

# panic-halt = "0.2.0"
# panic-abort = "0.3.2"
panic-semihosting = "0.6.0"

# stm32f4 = { version = "0.14.0", features = ["stm32f401","rt"] }
# stm32f4xx-hal = { version = "0.9.0", features = ["ld", "rt", "stm32f303xc"] }

