[package]
name = "rflight_drone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "ms",
]
ms = []

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "s" # size
# opt-level = "z" # speed

# [profile.dev.package."*"]
# opt-level = 3

[dependencies]
# cortex-m = "0.7.4"
cortex-m = { version = "0.7.4", features = ["inline-asm"] }
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"

# panic-halt = "0.2.0"
# panic-abort = "0.3.2"
# panic-semihosting = "0.6.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

defmt = "0.3.1"
defmt-rtt = "0.3.2"

# rtt-target = { version = "0.3.1", features = ["cortex-m"] }

embedded-hal = "0.2.7"
# embedded-hal = "1.0.0-alpha.7"
# nb = "1.0.0"
# embedded-time = "0.12.1"

systick-monotonic = "1.0.0"
dwt-systick-monotonic = "1.0.0"
fugit = "0.3.5"

stm32f4 = { version = "0.14.0", features = ["stm32f401","rt"] }
stm32f4xx-hal = { version = "0.13.1", features = ["stm32f401"] }
# stm32f4xx-hal = { version = "0.9.0", features = ["ld", "rt", "stm32f303xc"] }

# cortex-m-systick-countdown = "0.1.0"

arrayvec = { version = "0.7.2", default_features=false }
heapless = "0.7.10"

derive-new = { version = "0.5.9", default_features=false }
byteorder = { version = "1.4.3", default_features=false }

micromath = "2.0.0"

bluetooth-hci = "0.1.0"
# bluenrg = { version = "0.1.1", path = "../builds/bluenrg" }
# bluenrg = { version = "0.1.0", git = "https://github.com/danielgallagher0/bluenrg" }

bitflags = "1.3.2"

cortex-m-rtic = "1.0.0"

# nalgebra = { version = "0.30.1", default-features = false }
nalgebra = { version = "0.30.1", default-features = false, features = [ "libm" ] }
# ahrs = { version = "0.5.0", default-features = false }

